updated to shopping page app

--- a/src/components/Counter.module.css
+++ b/src/components/Counter.module.css
@@ -1,4 +1,4 @@
-.counter {
+/* .counter {
   margin: 5rem auto;
   box-shadow: 0 1px 8px rgba(0, 0, 0, 0.2);
   width: 40rem;
@@ -20,4 +20,4 @@
   color: #3c0080;
   margin: 2rem 0;
   font-weight: bold;
-}
+} */
