--- a/src/components/Auth.module.css
+++ b/src/components/Auth.module.css
@@ -1,4 +1,4 @@
-.auth {
+/* .auth {
   margin: 5rem auto;
   box-shadow: 0 1px 8px rgba(0, 0, 0, 0.2);
   width: 25rem;
@@ -26,4 +26,4 @@
   border-radius: 4px;
   padding: 0.25rem;
   border: 1px solid #ccc;
-}
+} */
