--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,4 +1,4 @@
-.header {
+/* .header {
   width: 100%;
   height: 5rem;
   display: flex;
@@ -45,4 +45,4 @@
 .header button:active {
   background-color: #ffa600;
   border-color: #ffa600;
-}
+} */
