--- a/src/components/UserProfile.module.css
+++ b/src/components/UserProfile.module.css
@@ -1,4 +1,4 @@
-.profile {
+/* .profile {
   margin: 5rem auto;
   box-shadow: 0 1px 8px rgba(0, 0, 0, 0.2);
   width: 40rem;
@@ -6,4 +6,4 @@
   padding: 1rem;
   text-align: center;
   background-color: #f4f0fa;
-}
+} */
